[package]
name = "abstractio"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2021"
keywords = ["advancedresearch", "avatar", "extensions", "physics", "io"]
description = "Abstract IO dimensionality analysis for physics using theory of Avatar Extensions"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/abstractio.git"
homepage = "https://github.com/advancedresearch/abstractio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
